抽象类与抽象方法问题分析

--- a/04_OOSamples/VirtualFunctionMembers/重写控制.md
+++ b/04_OOSamples/VirtualFunctionMembers/重写控制.md
@@ -8,7 +8,7 @@
 2.  重写控制（基类--派生类成对控制）
     . 基类virtual  派生 override  --基类成员内容不为空
 	. 基类virtual  派生 new --不建议使用
-	. 基类abstract  派生 override	 --基类成员为空
+	. 基类abstract  派生 override	 --基类成员实现内容为空
 
 
 
