抽象方法和虚拟方法区别

--- a/04_OOSamples/AbstractClassesAbstractMembers/重写控制.md
+++ b/04_OOSamples/AbstractClassesAbstractMembers/重写控制.md
@@ -10,13 +10,13 @@
 	. 基类virtual  派生 new --不建议使用
 	. 基类abstract  派生 override	 --基类成员没有方法体，由子类实现基类抽象方法
 
-3.问题分析
-	. 净值计算
+3. 问题分析
+	. 净值计算--业务
 	    -  资产类Asset没办法独立计算净值，因为每种资产有自己的净值计算方法。
 		-  股票净值Stock.NetValue=当前价格CurrentPrice*持股数CurrentPrice
 		-  房屋净值House.NetValue=当前价格CurrentPrice-抵押贷款Mortgage
     . 解决方案
-	    - 设计资产类Asset的计算净值NetValue方法为抽象方法，不写方法体
+	    - 设计资产类Asset的计算净值NetValue方法为抽象方法abstract，不写方法体
 		- 由于资产类Asset的有抽象方法，所以得把资产类Asset设计为抽象方法
 		- 股票类Stock和房屋类House都继承资产类Asset，所以都必须实现计算净值方法（以自己的方式计算）
 
