抽象方法和虚拟方法区别2

--- a/04_OOSamples/VirtualFunctionMembers/重写控制.md
+++ b/04_OOSamples/VirtualFunctionMembers/重写控制.md
@@ -11,13 +11,17 @@
 	. 基类abstract  派生 override	 --基类成员实现内容为空
 
 3. 问题分析
-	. 负债计算--业务
-	    -  资产类Asset没办法独立计算净值，因为每种资产有自己的净值计算方法。
-		-  股票净值Stock.NetValue=当前价格CurrentPrice*持股数CurrentPrice
-		-  房屋净值House.NetValue=当前价格CurrentPrice-抵押贷款Mortgage
+	. 业务分析
+	    -  有些资产是有负债情况的，如房屋抵押贷款等。
+		-  有些资产是没有或者暂时没有负债情况的，如股票。
+		-  但是对于资产而言评估其是否有负债是必要的。
     . 解决方案
-	    - 设计资产类Asset的计算净值NetValue方法为抽象方法abstract，不写方法体
-		- 由于资产类Asset的有抽象方法，所以得把资产类Asset设计为抽象方法
-		- 股票类Stock和房屋类House都继承资产类Asset，所以都必须实现计算净值方法（以
+	    - 设计资产类Asset的计算负债Liability只读属性Virtual，返回默认值0.
+		- 房屋类House继承资产类Asset，重写负债属性Liability，返回抵押贷款值Mortgage
+		- 股票类Stock继承资产类Asset，没有负债，继承资产类Asset的Liability，负债默认值为0
+
+		与抽象类的区别
+		抽象方法没有实现部分。
+		继承抽象类的派生类，必须要实现抽象类的所有方法。
 
 
