虚拟方法和抽象方法的区别

--- a/04_OOSamples/AbstractClassesAbstractMembers/重写控制.md
+++ b/04_OOSamples/AbstractClassesAbstractMembers/重写控制.md
@@ -21,7 +21,10 @@
 		- 股票类Stock和房屋类House都继承资产类Asset，所以都必须实现计算净值方法（以自己的方式计算）
 
 
-
+4.虚拟方法与抽象方法的区别
+		- 虚拟方法virtual与抽象方法abstract 都是基类的方法。
+		- 抽象方法abstract没有实现部分。虚拟方法virtual有实现部分
+		- 抽象方法abstract必须重写，虚拟方法virtual根据需要重写override。
 
 
 
