--- a/04_OOSamples/VirtualFunctionMembers/重写控制.md
+++ b/04_OOSamples/VirtualFunctionMembers/重写控制.md
@@ -20,8 +20,12 @@
 		- 房屋类House继承资产类Asset，重写负债属性Liability，返回抵押贷款值Mortgage
 		- 股票类Stock继承资产类Asset，没有负债，继承资产类Asset的Liability，负债默认值为0
 
-		与抽象类的区别
-		抽象方法没有实现部分。
-		继承抽象类的派生类，必须要实现抽象类的所有方法。
+
+4.虚拟方法与抽象方法的区别
+		- 虚拟方法virtual与抽象方法abstract 都是基类的方法。
+		- 抽象方法abstract没有实现部分。虚拟方法virtual有实现部分
+		- 抽象方法abstract必须重写，虚拟方法virtual根据需要重写override。
+
+	   
 
 
