--- a/08_DelegatesAndEventsSamples/EventOderDishesFullEditon/事件五要素.md
+++ b/08_DelegatesAndEventsSamples/EventOderDishesFullEditon/事件五要素.md
@@ -1,6 +1,6 @@
 ﻿#事件
 1.事件--顾客点餐 Customer.Order
-2.事件的拥有者--顾客Customer
-3.事件的响应者--服务员Waiter
+2.事件的发布者--顾客Customer
+3.事件的订阅者--服务员Waiter
 4.事件处理器--Waiter.Action
 5.事件订阅 --Customer.Order+=waiter.Action
